[package]
name = "sruttle"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = "0.12"
aya-log = "0.2"
sruttle-common = { path = "../sruttle-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
bytes = "1.7.1"
lazy_static = "1.5.0"
walkdir = "2.5.0"

[[bin]]
name = "sruttle"
path = "src/main.rs"
